[package]
name = "webhook-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive", "env"] }
humantime = "2.2.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.2", features = ["cors"] }
